Fix horizontal spacing of cards.

--- a/Dfe.SchoolAccount.Web/Frontend/scss/components/card.scss
+++ b/Dfe.SchoolAccount.Web/Frontend/scss/components/card.scss
@@ -1,4 +1,5 @@
 ﻿.app-card {
+  width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 3px solid #1d70b8;
